// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render the summary with 1 expense 1`] = `
<div>
  <h1>
     Viewing 
    1
     
    expense
     totalling 
    $1.10
  </h1>
</div>
`;

exports[`Should render the summary with multiple expenses 1`] = `
<div>
  <h1>
     Viewing 
    12
     
    expenses
     totalling 
    $11,123,876.40
  </h1>
</div>
`;
